--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -195,6 +195,28 @@ form input:invalid, form textarea:invalid, form select:invalid
   outline: 3px solid #ce001f;
 }
 
+//hack for date fields generated by rails
+
+.control-group 
+{
+  select
+  {
+    width: 32%;
+    margin-left: 1%;
+    margin-right: 1%;
+    clear: none;
+    float: left;
+    @include respond-to(handheld) { width: 100%; margin-left: 0;
+    margin-right: 0;}
+    &:first-of-type {
+      margin-left:0;
+      }
+      &:last-of-type {
+      margin-right:0;
+
+      }
+  }
+}
 
 
 //legacy
